--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 <body>
     <div class="header">
         <div class="logo-container">
-            <img src="0d0a40a82d16e7541d7a0a6a95b019b5_exif.jpg" alt="AIMLSE Logo - Learn The Frontiers">
+            <img src="https://raw.githubusercontent.com/aimlse/aimlse.github.io/main/ff22191b-5081-4aa8-a3b4-bb3b4bf046a2_removalai_preview.png" alt="AIMLSE Logo - Learn The Frontiers">
         </div>
         <p class="tagline">Artificial Intelligence, Machine Learning, and Quantum Science Education</p>
     </div>
@@ -458,7 +458,21 @@
                 <p>
                     AIMLSE is a nonprofit organization built to revolutionize how middle school students learn cutting-edge technology. 
                     We bring the future of technology education to everyone — combining open learning, real collaboration, 
-                    and intelligent automation in one connected platform.
+                    and intelligent automation in one connected platform. We don't just introduce concepts — we dive deep into the 
+                    fundamentals, ensuring students truly understand AI, machine learning, and quantum computing from the ground up.
+                </p>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Deep-Dive <span class="gradient-text">Learning Approach</span></h2>
+            <div class="mission-box">
+                <p>
+                    At AIMLSE, we believe in thorough, conceptual understanding rather than surface-level introductions. Our curriculum 
+                    takes students on a comprehensive journey through each topic, breaking down complex concepts into digestible lessons 
+                    while maintaining academic rigor. Students explore the mathematical foundations, practical applications, and ethical 
+                    implications of AI and quantum technologies. Through our structured program, students gain the knowledge and confidence 
+                    to pursue advanced studies in these cutting-edge fields.
                 </p>
             </div>
         </section>
@@ -565,6 +579,25 @@
         <h2>Ready to Transform Your Classroom?</h2>
         <p>Join educators bringing quantum computing and AI to middle school students</p>
         <a href="#joinForm" class="cta-button">Register as a Teacher</a>
+    </div>
+
+    <div class="container" style="padding-top: 0;">
+        <section class="section">
+            <h2 class="section-title">Resources for <span class="gradient-text">Students</span></h2>
+            <div class="mission-box" style="text-align: center;">
+                <h3 style="color: #0a1929; margin-bottom: 20px; font-size: 1.5rem;">📋 AIMLSE Student Poster</h3>
+                <p style="margin-bottom: 25px;">
+                    Interested in joining AIMLSE? Download our student information poster to learn more about the program 
+                    and share it with your teachers!
+                </p>
+                <a href="https://raw.githubusercontent.com/aimlse/aimlse.github.io/main/774894b4-8cf6-4485-ac76-a3620e1635d6%20(1).pdf" 
+                   class="cta-button" 
+                   download
+                   style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; display: inline-block; margin-top: 10px;">
+                    Download Student Poster (PDF)
+                </a>
+            </div>
+        </section>
     </div>
 
     <div class="footer">
