--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                         
                         <div class="highlight-box">
                             <h4 style="margin-top: 0;">If you are a student:</h4>
-                            <p>1. Fill out the Student Interest Survey <a>https://docs.google.com/forms/d/e/1FAIpQLSecbh_-L7wU1hooCT1fHWwSnfs3us36mIb7f64q06aJ1Z81LQ/viewform </a> </p>
+                            <p>1. Fill out the Student Interest Survey <a>href=https://docs.google.com/forms/d/e/1FAIpQLSecbh_-L7wU1hooCT1fHWwSnfs3us36mIb7f64q06aJ1Z81LQ/viewform </a> </p>
                             <p>2. Share our website — <strong>aimlse.org</strong> — with your teacher so they can register your school</p>
                         </div>
 
