--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                 <h2 class="section-title">Technologies We <span class="accent-text">Explore</span></h2>
                 <div class="tech-showcase">
                     <div class="tech-card">
-                        <img src="chatgpt.png" alt="Artificial Intelligence">
+                        <img src="chatgpt.jpg" alt="Artificial Intelligence">
                         <h4>Artificial Intelligence</h4>
                         <p>AI systems analyze information, recognize patterns, and make decisions in ways that resemble aspects of human reasoning. Students learn to build and understand AI models that can process data and solve real-world problems.</p>
                     </div>
