--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
         <div class="container">
             <section class="section visible form-section">
                 <h2>Volunteer <span class="accent-text">Application</span></h2>
-                <p>Join our team and help empower middle school students in AI, ML, and Quantum Computing</p>
+                <p>If you are over 14 and in 9th grade or above, Join our team and help empower middle school students in AI, ML, and Quantum Computing</p>
                 
                 <form id="volunteerForm" style="max-width: 800px; margin: 40px auto; background: #ffffff; padding: 40px; border-radius: 8px;">
                     <!-- Section 1: Personal Information -->
